<resources>
    <string name="app_name">PunkAPI</string>
    <string name="main_cv_image_description">Imagen de referencia de la cerveza</string>
    <string name="main_iv_image_description">Imagen en Grande de la cerveza</string>
    <string name="main_actv_tagline_title">Tagline</string>
    <string name="main_actv_fbrewed_title">First brewed date</string>
    <string name="main_actv_description_title">Description</string>
    <string name="main_actv_food_title">Food pairing</string>
    <string name="no_internet">No internet Connection Avalaible</string>
    <string name="title_activity_welcome">Welcome Activity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="boarding_text1">Stay updated with real time news</string>
    <string name="boarding_text2">Condensed stories for a busy lifestyle</string>
    <string name="boarding_text3">Beautiful award winning pictures</string>
    <string name="boarding_btn_text">Get started</string>
    <string name="generic_accept">Accept</string>
    <string name="generic_cancel">Cancel</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Newsfeed</string>
    <string name="menu_gallery">Favorites</string>
    <string name="menu_slideshow">Close App</string>
    <string name="error_get_images">Error al comunicarse con el servidor</string>
    <string name="wait_image">Pantalla de información en construcción</string>
</resources>
