<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_home"
            android:iconTint="@color/colorPrimary"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_star_24"
            android:title="@string/menu_gallery"
            android:iconTint="@color/colorPrimary"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_close_24"
            android:title="@string/menu_slideshow"
            android:iconTint="@color/colorPrimary"
            />
    </group>
</menu>