<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.test.tribal.ui.welcome.fragments.BoardingFragment"
        android:label="@string/boarding_text1"
        tools:layout="@layout/fragment_onboarding">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.test.tribal.ui.welcome.fragments.BoardingFragment"
        android:label="@string/boarding_text2"
        tools:layout="@layout/fragment_onboarding">

        <action
            android:id="@+id/action_SecondFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment" />
    </fragment>
    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.test.tribal.ui.welcome.fragments.BoardingFragment"
        android:label="@string/boarding_text3"
        tools:layout="@layout/fragment_onboarding">

        <action
            android:id="@+id/action_ThirdFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>